--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.app{
+    background-color:#8d9f84;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.result{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 45px 50px;
+   
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cardcantainer{
+    max-width: 25%;
+ 
+}
+.cardimage{
+    text-align: center;
+    padding-top: 15px;
+   
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
