--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,134 @@
 .app{
-    background-color:#8d9f84;
+    background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(2, 21, 74));
 }
 
 .result{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 45px 50px;
+    justify-content: center;
+    margin-right: 40px;
+    margin-top: 40px;
+    
    
 }
 
 .cardcantainer{
-    max-width: 25%;
- 
+   width: 300px;
+   height: 60vh;
+   padding-bottom: 100px;
+}
+.card{
+    background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(141, 9, 9));
 }
 .cardimage{
     text-align: center;
     padding-top: 15px;
-   
+}
+.cardinfo{
+    width: 90%;
+    height: 20vh;
 }
 
+.modal{
+margin-top: 15vh;
+     width: 40%;
+     height: 80%;
+ right: 30%;
+  position: absolute;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-weight: 900;
+  }
+
+  .description{
+      font-family:'montseratt' , sans-serif;
+      color: black;
+  }
+
+  .btn-like{
+      border-radius: 15px;
+      margin-bottom: 5px;
+      margin-left: 5px;
+
+  }
+
+  .form-search{
+   width: 300px;
+    height: 12vh;
+    padding: 30px;
+    appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 0px 0px 16px 16px;
+    margin-top: 1px;
+    margin-left: 15px;
+     box-shadow: 0px 5px rgba(0,0,0,0.2);
+  
+     color:#313131;
+     font-size: 20px;
+     transition: 0.4s ease;
+
+  }
+
+
+  .form-search-input{
+   
+    display: block;
+    padding: 5px;
+    
+  
+    appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+  
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 16px;
+    margin-top: 5px;
+     box-shadow: 0px 5px rgba(0,0,0,0.2);
+  
+     color:#313131;
+     font-size: 20px;
+     transition: 0.4s ease;
+  }
+
+  .form-search-button{
+   
+    display: block;
+    padding: 5px;
+    
+  
+    appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+  
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 16px;
+    margin-top: 3px;
+     box-shadow: 0px 5px rgba(0,0,0,0.2);
+  
+     color:#313131;
+     font-size: 15px;
+     transition: 0.4s ease;
+  }
+  @media only screen and (max-width: 600px) {
+    .modal{
+        margin-top: 15vh;
+             width: 70%;
+             height: 80%;
+         right: 10%;
+          position: absolute;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             font-weight: 900;
+          }
+    
+  }
 
